menu mejorado pero simple

--- a/index.html
+++ b/index.html
@@ -24,36 +24,32 @@
             </div>
 
         </div>
-        <div><img class="icono menu" src="./imagenes/menu.svg" /></div>
-        <div class="header-navbar">
-            <ul class="header-navbar-pages">
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./contenido/el_critico.html">El Crítico</a></li>
-                <li><a href="./contenido/novedades.html">Novedades</a></li>
-                <li><a href="./contenido/contacto.html">Contacto</a></li>
-            </ul>
-            <div class="header-navbar-buscar">
-                <form class="formulario" action="./contenido/resultados.html">
-                    <input type="text" class="borde-colorPrincipal" width="150px" placeholder="Introduce búsqueda" />
-                    <input type="submit" class="input-button colorFondo" value="Buscar" />
-                </form>
-            </div>
-            <ul class="header-navbar-login">
-                <li>
-                    <img class="icono" src="./imagenes/login.svg" /><a href="./index.html">Entrar</a></li>
-                <li>
-                    <img class="icono" src="./imagenes/new_user.svg" />
-                    <a href="./contenido/nuevo_usuario.html">Nuevo Usuario</a></li>
-            </ul>
-
-        </div>
+        <ul class="header-navbar">
+            <li><a href="./index.html">Inicio</a></li>
+            <li><a href="./contenido/el_critico.html">El Crítico</a></li>
+            <li><a href="./contenido/novedades.html">Novedades</a></li>
+            <li><a href="./contenido/contacto.html">Contacto</a></li>
+            <li>
+                <img class="icono" src="./imagenes/login.svg" /><a href="./index.html">Entrar</a></li>
+            <li>
+                <img class="icono" src="./imagenes/new_user.svg" />
+                <a href="./contenido/nuevo_usuario.html">Nuevo Usuario</a></li>
+        </ul>
 
 
     </header>
-    <div class="contenido-principal">
-        <div class="nav-aside">
-            <nav>
 
+    <div class="contenido-principal">
+
+        <div class="nav-aside">
+
+            <nav>
+                <div class="buscador">
+                    <form class="formulario" action="./contenido/resultados.html">
+                        <input type="text" class="borde-colorPrincipal" width="150px" placeholder="Introduce búsqueda" />
+                        <input type="submit" class="input-button colorFondo" value="Buscar" />
+                    </form>
+                </div>
                 <div>
                     <h3>REVISTAS CULTURALES</h3>
                 </div>
@@ -160,11 +156,12 @@
                 <h3>CULTURAL LIFE</h3>
                 <h4>Nuestra vida es la cultura.</h4>
             </div>
-        
+        </div>
         <div class="footer-contacto ">
             <h4><a href="./contenido/contacto.html ">Contacto</a></h4>
             <p>Te informamos de los términos legales y nuestras <a href="# ">Condiciones de uso</a></p>
         </div>
     </footer>
+    
 </body>
 </html>
