--- a/copia_Seg.html
+++ b/copia_Seg.html
@@ -5,7 +5,7 @@
     <meta charset=”utf-8”/>
     <title>Juan Ortega Herrerías</title>
 
-    <link rel="stylesheet" href="./css/guia_estils.css">
+    <link rel="stylesheet" href="./guia_estils.css">
     <link rel="stylesheet" href="./css/index.css">
     <script>
         alert("Soc Juan Ortega Herrerías");
@@ -44,16 +44,16 @@
         <div class="nav-aside">
 
             <nav>
-                <div class="buscador ">
+                <div class="buscador">
                     <form class="formulario" action="./contenido/resultados.html">
-                        <input type="text" class="borde-colorPrincipal " placeholder="Introduce búsqueda" />
+                        <input type="text" class="borde-colorPrincipal" placeholder="Introduce búsqueda" />
                         <input type="submit" class="input-button colorFondo" value="Buscar" />
                     </form>
                 </div>
                 <div>
                     <h3>REVISTAS CULTURALES</h3>
                 </div>
-                <ul class="links ">
+                <ul class="links">
                     <li><a href="https://culturamas.es/" target="_blank">CULTURAMAS</a>
                     </li>
                     <li><a href="https://www.elespanol.com/el-cultural/" target="_blank">EL ESPAÑOL CULTURAL</a>
@@ -63,15 +63,15 @@
                 </ul>
 
             </nav>
-            <aside class="publi1 ">
+            <aside class="publi1">
                 <div class="aside-banner">
-                    <img class="imagen-pequena" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
+                    <img class="mediana" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
                 </div>
                 <div class="aside-banner">
-                    <img class="imagen-pequena" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
+                    <img class="mediana" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
                 </div>
                 <div class="aside-banner">
-                    <img class="imagen-pequena" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
+                    <img class="mediana" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
                 </div>
             </aside>
         </div>
@@ -79,11 +79,11 @@
             <div>
                 <h2>RECOMENDAMOS ESTA SEMANA</h2>
             </div>
-            <div class="articulos ">
+            <div class="articulos">
                 <article>
                     <div>
                         <figure>
-                            <img class="imagen-grande" src="./imagenes/aitana_concierto.jpg" alt="Disco nuevo de Aitana" />
+                            <img class="grande" src="./imagenes/aitana_concierto.jpg" alt="Disco nuevo de Aitana" />
                             <figcaption>Aitana en concierto</figcaption>
                         </figure>
                     </div>
@@ -104,7 +104,7 @@
                 <article>
                     <div>
                         <figure>
-                            <img class="imagen-grande" src="./imagenes/batalla_gallos.jpeg" alt="dos campeones de las batllas de gallos de rap." />
+                            <img class="grande" src="./imagenes/batalla_gallos.jpeg" alt="dos campeones de las batllas de gallos de rap." />
                             <figcaption>Los campeones de 2019 y 2020, WOS y AZCINO.</figcaption>
                         </figure>
                     </div>
@@ -132,16 +132,16 @@
     </div>
     <aside class="publi2">
         <div class="aside-banner">
-            <img class="imagen-pequena" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
+            <img class="mediana" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
         </div>
         <div class="aside-banner">
-            <img class="imagen-pequena" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
+            <img class="mediana" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
         </div>
 
     </aside>
     <footer class="colorSecundario">
         <div>
-            <h3>Mantente informado...</h3>
+            <h4>Mantente informado...</h4>
             <ul class="footer-navbar-links ">
                 <li><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></li>
                 <li><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></li>
@@ -153,8 +153,8 @@
                 <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
             </div>
             <div>
-                <h2>CULTURAL LIFE</h2>
-                <h3>Nuestra vida es la cultura.</h3>
+                <h3>CULTURAL LIFE</h3>
+                <h4>Nuestra vida es la cultura.</h4>
             </div>
         </div>
         <div class="footer-contacto ">
