--- a/index.html
+++ b/index.html
@@ -14,75 +14,76 @@
 
 <body>
     <div class="container-fluid">
-        <header class="row colorPrincipal align-items-center">
-            <div class="col-12 col-xl-6 ">
+        <header class="row colorPrincipal align-items-center ">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-1 col-md-1 ">
+                    <div class="col-1">
                         <img class="web-icono" src="./imagenes/mascaras.png" alt="Icono
           de cultural life" />
                     </div>
-                    <div class="col-10 col-sm-10 col-lg-10 p-1">
+                    <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
                         <h2>Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6 ">
-                <ul class="row list-inline ">
-                    <li class="list-inline-item col">
+            <div class="col-12 col-lg-6 col-xl-4">
+                <ul class="row list-inline text-lg-center">
+                    <li class="list-inline-item col ">
                         <a href="./index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="./contenido/el_critico.html">El Crítico</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="./contenido/novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="./contenido/contacto.html">Contacto</a>
                     </li>
                 </ul>
-
             </div>
 
-            <div class=" offset-lg-6 col-lg-6">
-                <ul class="row list-inline text-center justify-content-between">
-                    <li class="list-inline-item col offset-md-4  ">
+            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
+                <ul class="row list-inline text-center text-lg-end">
+                    <li class="list-inline-item col   ">
                         <img class="icono" src="./imagenes/login.svg" alt="login" /><a href="./contenido/login.html">Entrar</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <img class="icono" src="./imagenes/new_user.svg" alt="nuevo usuario" />
-                        <a href="./contenido/nuevo_usuario.html">Nuevo Usuario</a>
+                        <a href="./contenido/nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
                 </ul>
             </div>
         </header>
     </div>
-    <div class="container-fluid ">
+
+
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-12 col-lg-4 col-xl-3">
                 <nav class="row">
                     <div class="col-12  text-center">
-                        <form class="formulario" action="./contenido/resultados.html">
-                            <input type="text" class="borde-colorPrincipal " placeholder="Introduce búsqueda" />
-                            <input type="submit" class="input-button colorFondo" value="Buscar" />
+                        <form class="formulario row" action="./contenido/resultados.html">
+                            <input type="text" class="borde-colorPrincipal col" placeholder="Introduce búsqueda" />
+                            <input type="submit" class="input-button col" value="Buscar" />
                         </form>
                     </div>
-                    <div class="col-12  text-center ">
+                    <div class="col-12  text-center mt-3 ">
                         <div>
                             <h3>REVISTAS CULTURALES</h3>
                         </div>
                         <ul class="row  row-cols-lg-3 text-center  list-inline">
-                            <li class="col-4 col-lg-12"><a href="https://culturamas.es/" target="_blank">CULTURAMAS</a>
+                            <li class="col-4 col-lg-12 mt-2"><a href="https://culturamas.es/" target="_blank">CULTURAMAS</a>
                             </li>
-                            <li class="col-4  col-lg-12"><a href="https://www.elespanol.com/el-cultural/" target="_blank">EL_ESPAÑOL CULTURAL</a>
+                            <li class="col-4  col-lg-12 mt-2"><a href="https://www.elespanol.com/el-cultural/" target="_blank">EL_ESPAÑOL CULTURAL</a>
                             </li>
-                            <li class="col-4 col-lg-12"><a href="https://www.jotdown.es/" target="_blank">JOT_DOWN</a>
+                            <li class="col-4 col-lg-12 mt-2"><a href="https://www.jotdown.es/" target="_blank">JOT_DOWN</a>
                             </li>
                         </ul>
                     </div>
                 </nav>
-                <div class="publi1 col-12 col-lg-12 order-2 order-lg-0">
+                <div class="publi1 col-12 col-lg-12 order-2 order-lg-0 mt-4">
                     <aside class="row container-fluid">
                         <div class="col col-lg-12">
                             <img class="img-fluid" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
@@ -97,7 +98,7 @@
                 </div>
             </div>
             <main class="col-12 col-lg-8 col-xl-9 ">
-                <div class="text-center">
+                <div class="text-center mb-5">
                     <h2>RECOMENDAMOS ESTA SEMANA</h2>
                 </div>
                 <div class="row container-xl row-cols-xl-6">
@@ -166,18 +167,24 @@
             </div>
         </div>
     </div>
-    </div>
+
     <div class="container-fluid colorSecundario ">
-        <footer class="row mt-5 ">
-            <div class="col-12 col-lg-4 col-xl-12">
+        <footer class="row mt-5 align-items-xl-center">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline ">
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></li>
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></li>
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></li>
+                    <li class="list-inline-item ">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                    </li>
+                    <li class="list-inline-item ">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    </li>
+                    <li class="list-inline-item ">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    </li>
                 </ul>
             </div>
-            <div class="col-12 col-lg-8 col-xl-6">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
                     <div class="col ">
                         <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
@@ -188,10 +195,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-xl-6 text-end ">
-                <h4>
-                    <a href="./contenido/contacto.html ">Contacto</a>
-                </h4>
+            <div class="col-12 text-end col-xl-4">
+
                 <p>Te informamos de los términos legales y nuestras
                     <a href="# ">Condiciones de uso</a>
                 </p>
