--- a/contenido/login.html
+++ b/contenido/login.html
@@ -13,69 +13,76 @@
 
 <body>
     <div class="container-fluid">
-        <header class="row colorPrincipal align-items-center">
-            <div class="col-12 col-lg-6 ">
+        <header class="row colorPrincipal align-items-center ">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-1 col-md-1 ">
+                    <div class="col-1">
                         <img class="web-icono" src="../imagenes/mascaras.png" alt="Icono
           de cultural life" />
                     </div>
-                    <div class="col-10 col-sm-10 col-lg-10 p-1">
+                    <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
                         <h2>Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <ul class="row list-inline ">
-                    <li class="list-inline-item col">
+            <div class="col-12 col-lg-6 col-xl-4">
+                <ul class="row list-inline text-lg-center">
+                    <li class="list-inline-item col ">
                         <a href="../index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/el_critico.html">El Crítico</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
 
-
-            <div class=" offset-lg-6 col-lg-6">
-                <ul class="row list-inline text-center justify-content-between">
-                    <li class="list-inline-item col">
-                        <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../index.html">Entrar</a>
+            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
+                <ul class="row list-inline text-center text-lg-end">
+                    <li class="list-inline-item col   ">
+                        <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../contenido/login.html">Entrar</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
-                        <a href="../contenido/nuevo_usuario.html">Nuevo Usuario</a>
+                        <a href="../contenido/nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
                 </ul>
             </div>
         </header>
     </div>
-    <div>
-    </div>
 
 
 
-    <div class="container row mt-5 p-5">
-        <div class="col-8 border-5 border-primary ">
-            <form class="justify-content-end row" method="post">
-                <label>Usuario<input class="col"type="text"></label>
-                <label>Contraseña<input class="col"type="contraseña"></label>
-                <button class="btn btn-default  my-0"> <a href="../index.html">Entrar</a></button>
 
+    <div class="container-fluid row login">
+        <div class="col-6 offset-3 mt-5 text-center ">
+            <h1>INTRODUCE TU USUARIO</h1>
+
+            <form action="../index.html" id="form" class="col-8 m-auto">
+                <div class="datos_personales row ">
+                    <div class="col-10 m-auto ">
+                        <h3>Login</h3>
+                        <div class="row text-start p-3 justify-content-between">
+                            <label>Email:
+                                    <input type="email" placeholder="Escribe tu email..."/></label>
+                            <label>Contraseña:
+                                    <input type="password"/></label>
+
+                        </div>
+
+
+                        <input type="submit" class="input-button " />
+                    </div>
+                </div>
             </form>
-
-
         </div>
-
     </div>
-
 
 
 
@@ -88,19 +95,25 @@
 
 
     <div class="container-fluid colorSecundario ">
-        <footer class="row mt-5 ">
-            <div class="col-12 col-lg-4 col-xl-12">
+        <footer class="row mt-5 align-items-xl-center">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline ">
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/instagram.svg " alt="icono de instagram " /></li>
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/facebook.svg " alt="icono de facebook " /></li>
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/twitter.svg " alt="icono de twitter " /></li>
+                    <li class="list-inline-item ">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                    </li>
+                    <li class="list-inline-item ">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    </li>
+                    <li class="list-inline-item ">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    </li>
                 </ul>
             </div>
-            <div class="col-12 col-lg-8 col-xl-6">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
                     <div class="col ">
-                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
+                        <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
                     </div>
                     <div class="col-9 ">
                         <h2>CULTURAL LIFE</h2>
@@ -108,16 +121,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-xl-6 text-end ">
-                <h4>
-                    <a href="../contenido/contacto.html ">Contacto</a>
-                </h4>
+            <div class="col-12 text-end col-xl-4">
+
                 <p>Te informamos de los términos legales y nuestras
                     <a href="# ">Condiciones de uso</a>
                 </p>
             </div>
         </footer>
-    </div>
     </div>
 
 </body>
