--- a/contenido/novedades.html
+++ b/contenido/novedades.html
@@ -13,59 +13,147 @@
 
 <body>
     <div class="container-fluid">
-        <header class="row colorPrincipal align-items-center">
-            <div class="col-12 col-lg-6 ">
+        <header class="row colorPrincipal align-items-center ">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-1 col-md-1 ">
+                    <div class="col-1">
                         <img class="web-icono" src="../imagenes/mascaras.png" alt="Icono
           de cultural life" />
                     </div>
-                    <div class="col-10 col-sm-10 col-lg-10 p-1">
+                    <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
                         <h2>Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <ul class="row list-inline ">
-                    <li class="list-inline-item col">
+            <div class="col-12 col-lg-6 col-xl-4">
+                <ul class="row list-inline text-lg-center">
+                    <li class="list-inline-item col ">
                         <a href="../index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/el_critico.html">El Crítico</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/contacto.html">Contacto</a>
                     </li>
                 </ul>
-
             </div>
 
-            <div class=" offset-lg-6 col-lg-6">
-                <ul class="row list-inline text-center justify-content-between">
-                    <li class="list-inline-item col">
+            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
+                <ul class="row list-inline text-center text-lg-end">
+                    <li class="list-inline-item col   ">
                         <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../contenido/login.html">Entrar</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
-                        <a href="../contenido/nuevo_usuario.html">Nuevo Usuario</a>
+                        <a href="../contenido/nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
                 </ul>
             </div>
         </header>
     </div>
-    <div>
+
+
+    <div class="container-fluid row ">
+        <main class="col">
+            <div class="text-center p-4">
+                <h2>NOVEDADES</h2>
+            </div>
+            <div class="row">
+                <article class="col-12 col-lg-6 col-xl-3 ">
+                    <div class="row container ">
+                        <figure class="col">
+                            <img class="img-fluid" src="../imagenes/bumbury.jpg" alt="Disco nuevo de bumbury" />
+                            <figcaption>Bumbury en concierto</figcaption>
+                        </figure>
+                    </div>
+                    <div>
+                        <h3 class="text-center">BUMBURY EN LA SALA RAZZMATAZZ</h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
+                            fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam, iste
+                        </p>
+                        <p>earum laborum inventore doloremque deserunt provident voluptatibus tenetur dolorum itaque Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, sed? Iusto omnis, autem, corrupti tempore quaerat provident unde hic
+                            voluptatum atque doloribus distinctio numquam maiores quam praesentium voluptatibus laudantium adipisci accusantium voluptas reiciendis in. Obcaecati voluptatum nam nihil magnam autem, nemo explicabo facere sed! Veniam eos
+                            dolores tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto
+                            deleniti quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
+                        </p>
+
+                    </div>
+                    <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                </article>
+                <article class="col-12 col-lg-6 col-xl-3 ">
+                    <div class="row container  ">
+                        <figure class="col">
+                            <img class="img-fluid " src="../imagenes/zapato_veloz_in_concert.jpg" alt="Concierto de zapato veloz" />
+                            <figcaption>Zapato veloz live</figcaption>
+                        </figure>
+                    </div>
+                    <div>
+                        <h3 class="text-center">ZAPATO VELOZ EN EL CAMP-NOU</h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
+                            fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam, iste
+                        </p>
+                        <p>earum laborum inventore doloremque deserunt provident voluptatibus tenetur dolorum itaque Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, sed? Iusto omnis, autem, corrupti tempore quaerat provident unde hic
+                            voluptatum atque doloribus distinctio numquam maiores quam praesentium voluptatibus laudantium adipisci accusantium voluptas reiciendis in. Obcaecati voluptatum nam nihil magnam autem, nemo explicabo facere sed! Veniam eos
+                            dolores tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto
+                            deleniti quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
+                        </p>
+                        <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                    </div>
+                </article>
+                <article class="col-12 col-lg-6 col-xl-3 ">
+                    <div class="row container  ">
+                        <figure class="col">
+                            <img class="img-fluid" src="../imagenes/Tu_actriz_favorita.png" alt="Locura en gravidez" />
+                            <figcaption>Anna Torner</figcaption>
+                        </figure>
+                    </div>
+                    <div>
+                        <h3 class="text-center">EL TEATRE OBERT LES PRESERTA LOCURA EN GRAVIDEZ</h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
+                            fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam, iste
+                        </p>
+                        <p>earum laborum inventore doloremque deserunt provident voluptatibus tenetur dolorum itaque Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, sed? Iusto omnis, autem, corrupti tempore quaerat provident unde hic
+                            voluptatum atque doloribus distinctio numquam maiores quam praesentium voluptatibus laudantium adipisci accusantium voluptas reiciendis in. Obcaecati voluptatum nam nihil magnam autem, nemo explicabo facere sed! Veniam eos
+                            dolores tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto
+                            deleniti quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
+                        </p>
+                        <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                    </div>
+                </article>
+                <article class="col-12 col-lg-6 col-xl-3  ">
+                    <div class="row ">
+                        <figure class="col ">
+                            <img class="img-fluid " src="../imagenes/bambo_greeeps_show.jpeg" alt="Teatro alternativo bambo greeeps show" />
+                            <figcaption>Bambo greeps show</figcaption>
+                        </figure>
+                    </div>
+                    <div>
+                        <h3 class="text-center">TEATRO ALTERNATIVO EN GIRONA</h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
+                            fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam, iste
+                        </p>
+                        <p>earum laborum inventore doloremque deserunt provident voluptatibus tenetur dolorum itaque Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, sed? Iusto omnis, autem, corrupti tempore quaerat provident unde hic
+                            voluptatum atque doloribus distinctio numquam maiores quam praesentium voluptatibus laudantium adipisci accusantium voluptas reiciendis in. Obcaecati voluptatum nam nihil magnam autem, nemo explicabo facere sed! Veniam eos
+                            dolores tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto
+                            deleniti quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
+                        </p>
+                        <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                    </div>
+                </article>
+            </div>
+        </main>
+
+
     </div>
-
-
-
-
-
-
-
 
 
 
@@ -74,19 +162,25 @@
 
 
     <div class="container-fluid colorSecundario ">
-        <footer class="row mt-5 ">
-            <div class="col-12 col-lg-4 col-xl-12">
+        <footer class="row mt-5 align-items-xl-center">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline ">
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/instagram.svg " alt="icono de instagram " /></li>
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/facebook.svg " alt="icono de facebook " /></li>
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/twitter.svg " alt="icono de twitter " /></li>
+                    <li class="list-inline-item ">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                    </li>
+                    <li class="list-inline-item ">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    </li>
+                    <li class="list-inline-item ">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    </li>
                 </ul>
             </div>
-            <div class="col-12 col-lg-8 col-xl-6">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
                     <div class="col ">
-                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
+                        <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
                     </div>
                     <div class="col-9 ">
                         <h2>CULTURAL LIFE</h2>
@@ -94,16 +188,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-xl-6 text-end ">
-                <h4>
-                    <a href="../contenido/contacto.html ">Contacto</a>
-                </h4>
+            <div class="col-12 text-end col-xl-4">
+
                 <p>Te informamos de los términos legales y nuestras
                     <a href="# ">Condiciones de uso</a>
                 </p>
             </div>
         </footer>
-    </div>
     </div>
 
 </body>
