--- a/contenido/resultados.html
+++ b/contenido/resultados.html
@@ -13,55 +13,114 @@
 
 <body>
     <div class="container-fluid">
-        <header class="row colorPrincipal align-items-center">
-            <div class="col-12 col-lg-6 ">
+        <header class="row colorPrincipal align-items-center ">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-1 col-md-1 ">
+                    <div class="col-1">
                         <img class="web-icono" src="../imagenes/mascaras.png" alt="Icono
           de cultural life" />
                     </div>
-                    <div class="col-10 col-sm-10 col-lg-10 p-1">
+                    <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
                         <h2>Nuestra vida es la cultura.</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <ul class="row list-inline ">
-                    <li class="list-inline-item col">
+            <div class="col-12 col-lg-6 col-xl-4">
+                <ul class="row list-inline text-lg-center">
+                    <li class="list-inline-item col ">
                         <a href="../index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/el_critico.html">El Crítico</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <a href="../contenido/contacto.html">Contacto</a>
                     </li>
                 </ul>
-
             </div>
 
-            <div class=" offset-lg-6 col-lg-6">
-                <ul class="row list-inline text-center justify-content-between">
-                    <li class="list-inline-item col">
-                        <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../index.html">Entrar</a>
+            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
+                <ul class="row list-inline text-center text-lg-end">
+                    <li class="list-inline-item col   ">
+                        <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../contenido/login.html">Entrar</a>
                     </li>
-                    <li class="list-inline-item col">
+                    <li class="list-inline-item col ">
                         <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
-                        <a href="../contenido/nuevo_usuario.html">Nuevo Usuario</a>
+                        <a href="../contenido/nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
                 </ul>
             </div>
         </header>
     </div>
-    <div>
+
+
+
+
+
+    <div class="container-fluid row ">
+        <main class="col">
+            <div class="text-center p-4">
+                <h2>NOVEDADES</h2>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-4 ">
+                    <div class="row container ">
+                        <figure class="col">
+                            <img class="img-fluid" src="../imagenes/zapato_veloz_in_concert.jpg" alt="Disco nuevo de bumbury" />
+                            <figcaption>Zapato veloz live</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Esto es el codigo que tengo que editar -->
+                <table class="table-bordered table-hover col-12 col-lg-8 text-center">
+                    <thead>
+                        <tr>
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Horario</th>
+                            <th scope="col">Lugar</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col">&nbsp</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">12/04/2022</th>
+                            <td>22:00h</td>
+                            <td>Camp Nou Barcelona</td>
+                            <td>18€</td>
+                            <td><button onclick="alert('Entrada comprada')"><a href="../index.html">Comprar</a></button></td>
+                        </tr>
+                        <tr>
+                            <tr>
+                                <th scope="row">13/04/2022</th>
+                                <td>22:00h</td>
+                                <td>Camp Nou Barcelona</td>
+                                <td>18€</td>
+                                <td><button onclick="alert('Entrada comprada')"><a href="../index.html">Comprar</a></button></td>
+                            </tr>
+                        </tr>
+                        <tr>
+                            <tr>
+                                <th scope="row">14/04/2022</th>
+                                <td>22:00h</td>
+                                <td>Camp Nou Barcelona</td>
+                                <td>18€</td>
+                                <td><button onclick="alert('Entrada comprada')"><a href="../index.html">Comprar</a></button></td>
+                            </tr>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+
     </div>
-
-
-
+    </main>
+    </div>
 
 
 
@@ -74,19 +133,25 @@
 
 
     <div class="container-fluid colorSecundario ">
-        <footer class="row mt-5 ">
-            <div class="col-12 col-lg-4 col-xl-12">
+        <footer class="row mt-5 align-items-xl-center">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline ">
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/instagram.svg " alt="icono de instagram " /></li>
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/facebook.svg " alt="icono de facebook " /></li>
-                    <li class="list-inline-item "><img class="icono colorSecundario " src="../imagenes/twitter.svg " alt="icono de twitter " /></li>
+                    <li class="list-inline-item ">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                    </li>
+                    <li class="list-inline-item ">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    </li>
+                    <li class="list-inline-item ">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    </li>
                 </ul>
             </div>
-            <div class="col-12 col-lg-8 col-xl-6">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
                     <div class="col ">
-                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
+                        <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
                     </div>
                     <div class="col-9 ">
                         <h2>CULTURAL LIFE</h2>
@@ -94,17 +159,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-xl-6 text-end ">
-                <h4>
-                    <a href="../contenido/contacto.html ">Contacto</a>
-                </h4>
+            <div class="col-12 text-end col-xl-4">
+
                 <p>Te informamos de los términos legales y nuestras
                     <a href="# ">Condiciones de uso</a>
                 </p>
             </div>
         </footer>
     </div>
-    </div>
+
 
 </body>
 
