perfilando ultimos detalles

--- a/contenido/el_critico.html
+++ b/contenido/el_critico.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header class="row colorPrincipal align-items-center ">
+    <!-- HEADER -->
+    <header class="container-fluid">
+        <div class="row colorPrincipal align-items-center">
             <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-1">
                         <img class="web-icono" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                                de cultural life" />
                     </div>
                     <div class="col-10 col-lg-10">
                         <h1>CULTURAL LIFE</h1>
@@ -28,120 +29,135 @@
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
                 <ul class="row list-inline text-lg-center">
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../index.html">Inicio</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/el_critico.html">El Crítico</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/novedades.html">Novedades</a>
                     </li>
-                    <li class="list-inline-item col ">
+                    <li class="list-inline-item col">
                         <a href="../contenido/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
-
-            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
+            <div class="col-12 offset-sm-4 col-sm-8 offset-md-6 col-md-6
+                    offset-xl-0
+                    col-xl-4">
                 <ul class="row list-inline text-center text-lg-end">
-                    <li class="list-inline-item col   ">
+                    <li class="list-inline-item col">
                         <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="../contenido/login.html">Entrar</a>
                     </li>
-                    <li class="list-inline-item col ">
-                        <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
+                    <li class="list-inline-item col">
+                        <img class="icono" src="../imagenes/new_user.svg" alt="nuevo
+                                usuario" />
                         <a href="../contenido/nuevo_usuario.html">Nuevo_Usuario</a>
                     </li>
                 </ul>
             </div>
-        </header>
-    </div>
-
-
-    <main class="col-12  mt-5">
-        <div class="text-center">
-            <h2>EL CRÍTICO RECOMIENDA</h2>
         </div>
-        <div class="row  mt-5">
-            <div class="col-12  col-md-5">
-                <div class="row container ">
-                    <figure>
-                        <img class="img-fluid" src="../imagenes/concierto_navidad.jpg " alt="concierto de navidad " />
-                        <figcaption>Concierto de Navidad</figcaption>
-                    </figure>
+    </header>
+    <!-- MAIN -->
+    <main class="container-fluid row">
+        <div class="col-12 mt-5">
+            <div class="text-center">
+                <h2>EL CRÍTICO RECOMIENDA</h2>
+            </div>
+            <div class="row mt-5">
+                <div class="col-12 col-lg-5">
+                    <div class="row container">
+                        <figure class="col mt-5">
+                            <img class="img-fluid" src="../imagenes/concierto_navidad.jpg" alt="concierto
+                                    de navidad" />
+                            <figcaption>Concierto de Navidad</figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <article class="col-12 col-lg-6 m-auto">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="text-center mb-4">CONCIERTO DE NAVIDAD
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
+                                fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam,
+                                iste
+                            </p>
+                            <p>earum laborum inventore doloremque deserunt provident voluptatibus tenetur dolorum itaque Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, sed? Iusto omnis, autem, corrupti tempore quaerat provident unde
+                                hic electus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
+                            </p>
+                            <p>
+                                <a href="./contenido/resultados.html">COMPRAR
+                                        ENTRADAS</a>
+                            </p>
+                        </div>
+                </article>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-5">
+                        <div class="row mt-5 container">
+                            <figure>
+                                <img class="img-fluid" src="../imagenes/tatiana.jpg" alt="Charlas
+                                con Tatiana" />
 
+                                <figcaption>Charlas con Tatiana</figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                    <article class="col-12 col-md-6 m-auto">
+                        <div class="row">
+                            <div class="col-12">
+                                <h3 class="text-center mb-3">CHARLAS CON TATIANA UBBRESKVIA</h3>
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
+                                    fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam,
+                                    iste
+                                </p>
+                                <p>aceat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto deleniti quidem ad fuga quo necessitatibus non odio
+                                    delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
+                                </p>
+                                <p>
+                                    <a href="./contenido/resultados.html">COMPRAR
+                                    ENTRADAS</a>
+                                </p>
+                            </div>
+                        </div>
+                    </article>
                 </div>
             </div>
-            <article class="col-12   col-md-6 m-auto">
-                <div class="row">
-                    <div class="col-12 ">
-                        <h3 class="text-center ">CONCIERTO DE NAVIDAD</h3>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
-                            fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam, iste
-                        </p>
-                        <p>earum laborum inventore doloremque deserunt provident voluptatibus tenetur dolorum itaque Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, sed? Iusto omnis, autem, corrupti tempore quaerat provident unde hic
-                            electus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
-                        </p>
-                        <p>
-                            <a href="./contenido/resultados.html ">COMPRAR ENTRADAS</a>
-                        </p>
-                    </div>
-            </article>
-
-            <div class="col-12  col-md-5">
-                <div class="row container ">
-                    <figure>
-                        <img class="img-fluid" src="../imagenes/tatiana.jpg " alt="Charlas con Tatiana" />
-
-                        <figcaption>Charlas con Tatiana</figcaption>
-                    </figure>
-                </div>
-            </div>
-            <article class="col-12   col-md-6 m-auto">
-                <div class="row">
-                    <div class="col-12 ">
-                        <h3 class="text-center ">CHARLAS CON TATIANA UBBRESKVIA</h3>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
-                            fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam, iste
-                        </p>
-                        <p>aceat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto deleniti quidem ad fuga quo necessitatibus non odio delectus
-                            rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
-                        </p>
-                        <p>
-                            <a href="./contenido/resultados.html ">COMPRAR ENTRADAS</a>
-                        </p>
-                    </div>
-            </article>
-
-            </div>
-
     </main>
-
-
-    <div class="container-fluid colorSecundario ">
-        <footer class="row mt-5 align-items-xl-center">
+    <!-- FOOTER -->
+    <footer class="container-fluid colorSecundario">
+        <div class="row mt-5 align-items-xl-center">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
-                <ul class="list-inline ">
-                    <li class="list-inline-item ">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono
+                                            colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                                            de instagram" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
+                                            colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                            de facebook" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono
+                                            colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                                            de twitter" /></a>
                     </li>
                 </ul>
             </div>
             <div class="col-12 col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
-                    <div class="col ">
-                        <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
+                    <div class="col">
+                        <img class="icono-mediano" src="../imagenes/mascaras.png" alt="Icono
+                                        de cultural life" />
                     </div>
-                    <div class="col-9 ">
+                    <div class="col-9">
                         <h2>CULTURAL LIFE</h2>
                         <h3>Nuestra vida es la cultura.</h3>
                     </div>
@@ -150,12 +166,15 @@
             <div class="col-12 text-end col-xl-4">
 
                 <p>Te informamos de los términos legales y nuestras
-                    <a href="# ">Condiciones de uso</a>
+                    <a href="#">Condiciones de uso</a>
                 </p>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
 
+</body>
+
+</html>
 </body>
 
 </html>
