--- a/contenido/resultados.html
+++ b/contenido/resultados.html
@@ -71,13 +71,13 @@
                     <div class="row container ">
                         <figure class="col">
                             <img class="img-fluid" src="../imagenes/zapato_veloz_in_concert.jpg" alt="Disco nuevo de bumbury" />
-                            <figcaption>Zapato veloz live</figcaption>
+                            <figcaption>Zapato veloz life</figcaption>
                         </figure>
                     </div>
                 </div>
 
-                <!-- Esto es el codigo que tengo que editar -->
-                <table class="table-bordered table-hover col-12 col-lg-8 text-center">
+
+                <table class="table-bordered table-striped col-12 col-lg-8 text-center">
                     <thead>
                         <tr>
                             <th scope="col">Fecha</th>
@@ -132,28 +132,32 @@
 
 
 
-    <div class="container-fluid colorSecundario ">
+    <div class="container-fluid colorSecundario">
         <footer class="row mt-5 align-items-xl-center">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
-                <ul class="list-inline ">
-                    <li class="list-inline-item ">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                  de instagram" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                  de facebook" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                  de twitter" /></a>
                     </li>
                 </ul>
             </div>
             <div class="col-12 col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
-                    <div class="col ">
-                        <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
+                    <div class="col">
+                        <img class="icono-mediano" src="../imagenes/mascaras.png" alt="Icono
+                de cultural life" />
                     </div>
-                    <div class="col-9 ">
+                    <div class="col-9">
                         <h2>CULTURAL LIFE</h2>
                         <h3>Nuestra vida es la cultura.</h3>
                     </div>
@@ -162,12 +166,11 @@
             <div class="col-12 text-end col-xl-4">
 
                 <p>Te informamos de los términos legales y nuestras
-                    <a href="# ">Condiciones de uso</a>
+                    <a href="#">Condiciones de uso</a>
                 </p>
             </div>
         </footer>
     </div>
-
 
 </body>
 
