--- a/contenido/login.html
+++ b/contenido/login.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header class="row colorPrincipal align-items-center ">
+    <!-- HEADER -->
+    <header class="container-fluid">
+        <div class="row colorPrincipal align-items-center ">
             <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-1">
@@ -42,7 +43,6 @@
                     </li>
                 </ul>
             </div>
-
             <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
                 <ul class="row list-inline text-center text-lg-end">
                     <li class="list-inline-item col   ">
@@ -54,66 +54,50 @@
                     </li>
                 </ul>
             </div>
-        </header>
-    </div>
-
-
-
-
-    <div class="container-fluid row login">
+        </div>
+    </header>
+    <!-- MAIN -->
+    <main class="container-fluid row ">
         <div class="col-6 offset-3 mt-5 text-center ">
-            <h1>INTRODUCE TU USUARIO</h1>
+            <h1 class="my-3">INTRODUCE TU USUARIO</h1>
 
             <form action="../index.html" id="form" class="col-8 m-auto">
-                <div class="datos_personales row ">
-                    <div class="col-10 m-auto ">
+                <div class=" row ">
+                    <div class="col-10 m-auto p-4">
                         <h3>Login</h3>
                         <div class="row text-start p-3 justify-content-between">
-                            <label>Email:
-                                    <input type="email" placeholder="Escribe tu email..."/></label>
-                            <label>Contraseña:
-                                    <input type="password"/></label>
-
+                            <label class="col-4">Email</label>
+                            <input class="col-8" type="email" placeholder="Escribe tu email..." />
+                            <label class="col-4">Contraseña:</label>
+                            <input class="col-8" type="password" /></label>
                         </div>
-
-
-                        <input type="submit" class="input-button " />
+                        <input class="btn input-button btn-lg " type="submit"></button>
                     </div>
                 </div>
             </form>
         </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-    <div class="container-fluid colorSecundario ">
-        <footer class="row mt-5 align-items-xl-center">
-            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+    </main>
+    <!-- FOOTER -->
+    <footer class=" container-fluid colorSecundario">
+        <div class="row mt-5 align-items-xl-center ">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2 ">
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline ">
                     <li class="list-inline-item ">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                        <a href="http://www.instagram.com " target="_blank "><img class="icono colorSecundario " src="../imagenes/instagram.svg " alt="icono de instagram " /></a>
                     </li>
                     <li class="list-inline-item ">
-                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                        <a href="https://es-es.facebook.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/facebook.svg " alt="icono de facebook " /></a>
                     </li>
                     <li class="list-inline-item ">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                        <a href="https://twitter.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/twitter.svg " alt="icono de twitter " /></a>
                     </li>
                 </ul>
             </div>
-            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
-                <div class="container row align-items-center">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-6 ">
+                <div class="container row align-items-center ">
                     <div class="col ">
-                        <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
+                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
                     </div>
                     <div class="col-9 ">
                         <h2>CULTURAL LIFE</h2>
@@ -121,14 +105,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 text-end col-xl-4">
+            <div class="col-12 text-end col-xl-4 ">
 
                 <p>Te informamos de los términos legales y nuestras
                     <a href="# ">Condiciones de uso</a>
                 </p>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
+
 
 </body>
 
