--- a/contenido/novedades.html
+++ b/contenido/novedades.html
@@ -161,28 +161,33 @@
 
 
 
-    <div class="container-fluid colorSecundario ">
+
+    <div class="container-fluid colorSecundario">
         <footer class="row mt-5 align-items-xl-center">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
-                <ul class="list-inline ">
-                    <li class="list-inline-item ">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                  de instagram" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                  de facebook" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                  de twitter" /></a>
                     </li>
                 </ul>
             </div>
             <div class="col-12 col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
-                    <div class="col ">
-                        <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
+                    <div class="col">
+                        <img class="icono-mediano" src="../imagenes/mascaras.png" alt="Icono
+                de cultural life" />
                     </div>
-                    <div class="col-9 ">
+                    <div class="col-9">
                         <h2>CULTURAL LIFE</h2>
                         <h3>Nuestra vida es la cultura.</h3>
                     </div>
@@ -191,7 +196,7 @@
             <div class="col-12 text-end col-xl-4">
 
                 <p>Te informamos de los términos legales y nuestras
-                    <a href="# ">Condiciones de uso</a>
+                    <a href="#">Condiciones de uso</a>
                 </p>
             </div>
         </footer>
